--- a/style.css
+++ b/style.css
@@ -1,23 +1,20 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  height: 100%;
+  width: 100%;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #d7e6d5;
-  /* font-family: arial, sans-serif; */
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  height: 90vh;
   gap: 10px;
 }
 
@@ -28,20 +25,20 @@ body {
 }
 
 .top > div {
-  flex: 1;
   background-color: #d07f7f;
+  height: 10rem;
 }
 
 .middle {
   display: flex;
-  flex: 1;
+  justify-content: center;
   gap: 10px;
 }
 
 .middle-left {
   background-color: #808d79;
   display: flex;
-  flex: 2;
+  flex:1;
   justify-content: center;
   align-items: center;
 }
