--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .top {
   display: flex;
-  flex: 1;
+  height: auto;
   gap: 10px;
 }
 
@@ -38,7 +38,6 @@ body {
 .middle-left {
   background-color: #808d79;
   display: flex;
-  flex:1;
   justify-content: center;
   align-items: center;
 }
@@ -51,13 +50,11 @@ body {
 
 .middle-right {
   display: flex;
-  flex: 1;
   flex-direction: column;
   gap: 10px;
 }
 
 .middle-right > div {
   display: flex;
-  flex: 1;
   background-color: #94a376;
 }
